# sdk-imgui-sdl

./: .gitmodules  CMakeLists.txt  Makefile  autogen.sh  shipp.json
include/: trollworks-imgui-sdl.hpp
include/trollworks-imgui-sdl/: imgui.hpp  plugin.hpp
src/: main.cpp  plugin.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_widgets.cpp
